# ruyah

./: .gitignore  README.md  __init__.py  admin.py  apps.py  mixins.py  models.py  permissions.py  pyproject.toml  requirements.txt  serializers.py  tests.py  urls.py  validators.py  views.py
.github/workflows/: django.yml
api/: __init__.py  mixins.py  permissions.py  serializers.py  urls.py  views.py
migrations/: 0001_initial.py  0002_alter_list_description_alter_task_description.py  0002_list_description.py  0003_remove_list_default.py  0003_remove_task_completion_rate_gte_0_and_more.py  0004_alter_list_options_alter_task_options_and_more.py  0005_remove_list_list_name_index_and_more.py  0006_alter_task_deadline.py
ruyah/: __init__.py  apps.py  urls.py
ruyah/ai/: __init__.py  apps.py  serializers.py  views.py
ruyah/categories/: __init__.py  apps.py  models.py  serializers.py  views.py
ruyah/comments/: apps.py  models.py  serializers.py  views.py
ruyah/lists/: apps.py  models.py  serializers.py  views.py
ruyah/tags/: apps.py  serializers.py  views.py
ruyah/tasks/: __init__.py  apps.py  models.py  serializers.py  views.py
ruyah/users/: __init__.py  apps.py  serializers.py
task_flow/: __init__.py  apps.py  mixins.py  permissions.py  urls.py
task_flow/categories/: apps.py  serializers.py  views.py
task_flow/comments/: __init__.py  apps.py  models.py  serializers.py  views.py
task_flow/lists/: __init__.py  apps.py  models.py  serializers.py  views.py
task_flow/tags/: __init__.py  apps.py  models.py  serializers.py  views.py
task_flow/tasks/: __init__.py  apps.py  models.py  serializers.py  (+2 more)
(+84 files in other folders)
